client/src/utils/utils.scss
/* ... */
.u-sectionLabel {
  display: block;
  width: 100%;
  font-size: var(--sl-font-size-medium);
  font-weight: bold;
  letter-spacing: 0.04em;
  text-align: center;

  background: var(--c-bleumarine);
  padding: calc(var(--spacing) / 4) calc(var(--spacing) / 2);
  color: white;
  border-radius: 4px;

  margin-bottom: calc(var(--spacing) / 1);

  > * {
    // display: inline-block;
  }

  // &::before {
  //   content: "en chantier :)";
  //   font-family: "Fira Code";
  //   padding: calc(var(--spacing) / 4) calc(var(--spacing) / 1);
  //   border-radius: 6px;
  //   transform: rotate(-6deg);
  //   position: relative;
  //   display: inline-block;
  // }
}

.u-instructions {
  font-style: italic;
  color: var(--label-color);
}
.u-warning {
  display: flex;
  gap: calc(var(--spacing) / 1);
  // justify-content: center;
  align-items: center;
  color: var(--c-rouge);
  // font-weight: bold;
  border: 1px solid var(--c-rouge);
  border-top-width: 4px;
  max-width: 50ch;
  // background-color: var(--c-rouge_clair);
  // color: white;
  // color: white;
  padding: calc(var(--spacing) / 4) calc(var(--spacing) / 1);
  border-radius: var(--input-border-radius);

  // font-weight: 400;

  &::before {
    content: "⚠";
    font-size: 150%;
  }
}

.u-notice {
  display: flex;
  gap: calc(var(--spacing) / 2);
  align-items: center;
  padding: calc(var(--spacing) / 1.5);
  background-color: var(--c-bleumarine_clair);
  border-radius: 4px;
  font-size: 0.9em;
  color: var(--c-bleumarine_tres_fonce);
}

.u-wips {
  position: relative;
  // text-align: center;
  margin: calc(var(--spacing) / 2) 0;

  &::before {
    content: "en chantier :)";
    font-family: "Fira Code";
    background: var(--c-orange);
    padding: calc(var(--spacing) / 8) calc(var(--spacing) / 4);
    font-size: var(--sl-font-size-small);

    border-radius: 6px;
    transform: rotate(-6deg);
    position: relative;
    display: inline-block;
  }
}

.u-padding-small {
  padding: calc(var(--spacing) / 2);
}

.u-card--header {
  font-weight: 600;
}

.u-card2 {
  border: 2px solid var(--c-gris_clair);
  // box-shadow: 0 0px 2px rgba(0, 0, 0, 0.1);
  // filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.1));

  transform-origin: center center;
  transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);

  &:hover,
  &:focus-visible {
    transform: translateY(-0) rotate(-0deg);
    filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.05));
    border-color: var(--c-gris);
  }
}

.u-errorMsg {
  color: var(--c-rouge);
  font-style: italic;
}

.b-icon {
  display: inline-block;
  min-width: 1em;
  min-height: 1em;
  max-width: none;
  overflow: visible;
}

.u-buttonLink {
  font-weight: 400;
  // text-transform: lowercase;
  background: transparent;

  line-height: 1;
  padding: 0;
  color: currentColor;
  text-decoration: underline;
  text-decoration-thickness: auto;
  text-underline-offset: 0.1em;
  cursor: pointer;
  display: inline-flex;
  align-items: center;
  flex-flow: row nowrap;
  white-space: nowrap;
  gap: calc(var(--spacing) / 4);
  font-size: var(--sl-font-size-small);

  text-decoration-thickness: 0.07em;

  &[disabled] {
    cursor: not-allowed;
    text-decoration: none;
  }

  &.is--active {
    color: var(--c-bleuvert);
    font-weight: 600;
    text-decoration: none;
  }
  &.has--whitebg {
    background: white;
  }
  &.u-buttonLink_white {
    color: white;
  }
  &.u-buttonLink_red {
    color: var(--c-rouge);
  }

  &:hover,
  &:focus {
    text-decoration: none;
  }
  &:focus-visible {
    background-color: var(--active-color);
  }

  svg {
    pointer-events: none;
  }
}

button,
.u-unset {
  appearance: unset;
}

.u-button {
  display: inline-flex;
  gap: calc(var(--spacing) / 4);
  align-items: center;
  justify-content: center;
  // outline: 2px solid transparent;
  font-weight: 400;
  font-size: var(--input-font-size);
  text-decoration: none;
  color: inherit;
  white-space: nowrap;
  cursor: pointer;
  background-color: var(--c-gris_clair);
  white-space: break-spaces;

  padding: calc(var(--spacing) / 2) calc(var(--spacing) / 1);
  border-radius: var(--input-border-radius);

  transition: all 0.2s cubic-bezier(0.19, 1, 0.22, 1);

  .b-icon.bi {
    width: 1.35em;
    height: 1.35em;
  }

  svg,
  .inlineSVG {
    flex: 0 0 auto;
    fill: currentColor;
    width: 1.5rem;
    height: 1.5rem;
  }

  &[disabled] {
    cursor: not-allowed;
    filter: grayscale(50%);
    color: var(--c-gris);
  }

  &:hover,
  &:active,
  &:focus-visible {
    &:not([disabled]) {
      outline: 0;
      background-color: var(--c-gris);
    }
  }
  &.is--active {
    background-color: var(--c-gris_fonce);
    color: white;
    // outline: 2px solid var(--active-color);
    box-shadow: 0 2px 4px inset rgba(0, 0, 0, 0.2);

    &[disabled] {
      color: var(--c-gris);
    }

    &:hover,
    &:active,
    &:focus-visible {
      background-color: var(--g-500);
    }
  }
}

.u-button_icon {
  padding: calc(var(--spacing) / 2);
  background: transparent;
  border-radius: 50%;
  border: none;
  color: inherit;

  > svg {
    display: block;
  }

  &:hover,
  &:active,
  &:focus-visible {
    &:not([disabled]) {
      // color: var(--active-color);
      background-color: rgba(0, 0, 0, 0.1);
    }
  }

  &.u-button_small {
    padding: calc(var(--spacing) / 4);
    .b-icon.bi {
      width: 1em;
      height: 1em;
    }
  }
}
.u-button_inline {
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
  justify-content: center;
}
.u-button_floating {
  box-shadow: 0px 5px 24px currentColor;
}
.u-button_wide {
  min-width: 3.5em;
}
.u-button_transparent {
  background-color: transparent;
}
.u-button_black {
  background-color: var(--c-noir);
  color: white;

  &:hover,
  &:focus-visible {
    &:not([disabled]) {
      background-color: #333;
    }
  }

  &.is--active {
    background-color: #444;

    &:hover,
    &:focus-visible {
      // background-color: #000;
    }
  }
}
/* ... */

